[GStreamer][WebRTC] Colorimetry-related warnings for incoming video streams https://bugs.webkit.org/show_bug.cgi?id=288716

Reviewed by Xabier Rodriguez-Calvar.

Building a GstVideoInfo from non-raw video caps leads to warnings so avoid that for encoded formats.

* Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.cpp:
(WebCore::getVideoResolutionFromCaps):
(WebCore::videoColorSpaceFromCaps):
* Source/WebCore/platform/graphics/gstreamer/VideoTrackPrivateGStreamer.cpp:
(WebCore::VideoTrackPrivateGStreamer::updateConfigurationFromCaps):

Canonical link: https://commits.webkit.org/291315@main